--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Plan Pacific Construction</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" type="image/png" href="images/PPC_Favicon_Orange.png">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/home/mobile.css">  
+        <script src="Javascript/scripts.js" defer></script>
     </head>
-    <body>
-        
+    <body>   
+        <header>
+            <div class ="head-container">
+                <div id="hamburger-menu"><img src="images/Hamburger-Menu.png" id="menu"></div>
+            </div>
+            <div class = "logo-container">
+                <div class="logo"><img src="images/PPC_Alternate_White_Orange.png"></div>
+            </div>
+            <div class ="menu-container">
+                <nav class="nav">
+                    <ul>
+                        <li class="menu-border"><a href="index.html"><p class="active">Home</p></a></li>
+                        <li class="menu-border"><a href="services.html">Services</a></li>
+                        <li class="menu-border"><a href="projects.html">Projects</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
         <footer>
 
         </footer>
