finished mobile homepage

--- a/index.html
+++ b/index.html
@@ -52,14 +52,32 @@
             </div>
             <div id="submit">
                 <div id="submit-button">
-                    <div class="halfCircleLeft request-hover" onmouse><a href="contact.html"></a></div>
-                    <div class="rectangle request-hover"><a href="contact.html">request<br>quote</a></div>
-                    <div class="halfCircleRight request-hover"><a href="contact.html"></a></div>
+                    <div class="halfCircleLeft" onmouse><a href="contact.html"></a></div>
+                    <div class="rectangle"><a href="contact.html">request<br>quote</a></div>
+                    <div class="halfCircleRight"><a href="contact.html"></a></div>
                 </div>
+            </div>
+            <div id="downward-arrow">
+                <a class="go-about-us" href="#about-us-container">&#10094</a>
+            </div>
+            <div id="about-us-container">
+                <h2>About Us</h2>
+                <span class="line"></span>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condimentum fringilla vulputate. 
+                    Vestibulum sagittis a justo et pulvinar. Phasellus id tellus urna. Proin vel nisl enim. Aliquam non massa lectus. 
+                    Pellentesque vel convallis orci, in pellentesque leo. 
+                    Vivamus vulputate nisl sem, eget faucibus nunc luctus ut. Curabitur tempus dui eros, ac accumsan ex cursus ut.
+                </p>
             </div>
         </div>
         <footer>
-
+            <div id="line"></div>
+            <div id="contact-info">
+                <div id="name">Jerry Wong</div>
+                <div id="e-mail">planpacificconstruction@gmail.com</div>
+                <div id="phone-number">604-700-7499</div>
+            </div>
         </footer>
     </body>
 </html>
