reorganized files and CSS changes to desktop view

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                 <div id="e-mail">planpacificconstruction@gmail.com</div>
                 <div id="phone-number">604-700-7499</div>
             </div>
+            <div id="social-media">
+                <a href="TBD">
+                    
+                </a>
+            </div>
         </footer>
     </body>
 </html>
