--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
     <head>
         <title>Plan Pacific Construction</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/png" href="images/PPC_Favicon_Orange.png">
+        <link rel="shortcut icon" type="image/png" href="images/flavicon/PPC_Favicon_Orange.png">
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/home/mobile.css"> 
         <link rel="stylesheet" href="css/home/landscape.css"> 
         <link rel="stylesheet" href="css/home/desktop.css">
-        <script src="Javascript/scripts.js" defer></script>
+        <script src="Javascript/home/scripts.js" defer></script>
     </head>
     <body>   
         <!-- header section with logo and menu -->
         <header>
             <div class ="head-container">
-                <div id="hamburger-menu"><img src="images/Hamburger-Menu.png" id="menu"></div>
+                <div id="hamburger-menu"><img src="images/icons/Hamburger-Menu.png" id="menu"></div>
             </div>
             <div class = "logo-container">
-                <div class="logo"><img src="images/PPC_Alternate_White_Orange.png"></div>
+                <div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div>
             </div>
             <div class="line-desktop"></div>
             <div class ="menu-container">
@@ -87,9 +87,14 @@
                 <div id="phone-number">604-700-7499</div>
             </div>
             <div id="social-media">
-                <a href="TBD">
-                    
-                </a>
+                <div id="social-icons">
+                    <a href="TBD">
+                        <img class="facebook" src="images/icons/facebook-icon.png">
+                    </a>
+                    <a href="https://www.instagram.com/planpacificconstruction/">
+                        <img class="instagram" src="images/icons/instagram-icon.png">
+                    </a>
+                </div>
             </div>
         </footer>
     </body>
