project_interior start

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,31 @@
             </div>
             <div class="line-desktop"></div>
         </header>
-
+        <div id="link-container">
+            <div id="interior-container">
+                <a class = "interior" href="projects_interior.html">
+                    <img src="images/projects/projects_interior/Basement-reno.jpg">
+                    <div class="text">Interior</div>
+                </a>
+            </div>
+            <div id="exterior-container">
+                <a class = "exterior" href="projects_exterior.html">
+                    <img src="images/projects/projects_exterior/Deck.jpg">
+                    <div class="text">Exterior</div>
+                </a>
+            </div>
+        </div>
+        <div id="submit">
+            <div id="submit-button">
+                <div class="halfCircleLeft" onmouse><a href="contact.html"></a></div>
+                <div class="rectangle">
+                    <div class="request-container">
+                        <a href="contact.html">request<br>quote</a>
+                    </div>
+                </div>
+                <div class="halfCircleRight"><a href="contact.html"></a></div>
+            </div>
+        </div>
         <div id="line"></div>
         <footer>
             <div id="contact-info">
