--- a/services.html
+++ b/services.html
@@ -31,7 +31,118 @@
             </div>
             <div class="line-desktop"></div>
         </header>
-
+        <div class="services-title">
+            <div class="line"></div>
+            <h2>Services</h2>
+            <div class="line"></div>
+        </div>
+        <div class="container-title">
+            <div class="line"></div>
+            <h3>Interior</h3>
+            <div class="line"></div>
+        </div>
+        <div class="container left">
+            <div class="carousel-container">
+                <div class="slideshow-container">
+                    <div class ="slide fade slides">
+                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
+                    </div>
+                    <div class="slide fade slides">
+                        <img src="images/home/bathroom-reno.jpg">
+                    </div>
+                    <div class="slide fade slides">
+                        <img src="images/home/exterior-finishing.jpg">
+                    </div>
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <div class="dot-container">
+                    <span class="dot dots" onclick="currentSlide(1)"></span>
+                    <span class="dot dots" onclick="currentSlide(2)"></span>
+                    <span class="dot dots" onclick="currentSlide(3)"></span>
+                </div>                
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p> 
+        </div>
+        <div class="container-title">
+            <div class="line"></div>
+            <h3>Exterior</h3>
+            <div class="line"></div>
+        </div>
+        <div class="container right">
+            <div class="carousel-container">
+                <div class="slideshow-container">
+                    <div class ="slide1 fade slides">
+                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
+                    </div>
+                    <div class="slide1 fade slides">
+                        <img src="images/home/bathroom-reno.jpg">
+                    </div>
+                    <div class="slide1 fade slides">
+                        <img src="images/home/exterior-finishing.jpg">
+                    </div>
+                    <a class="prev" onclick="plusSlides1(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides1(1)">&#10095;</a>
+                </div>
+                <div class="dot-container">
+                    <span class="dot1 dots" onclick="currentSlide1(1)"></span>
+                    <span class="dot1 dots" onclick="currentSlide1(2)"></span>
+                    <span class="dot1 dots" onclick="currentSlide1(3)"></span>
+                </div>            
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p> 
+        </div>
+        <div class="container-title">
+            <div class="line"></div>
+            <h3>Other</h3>
+            <div class="line"></div>
+        </div>
+        <div class="container left">
+            <div class="carousel-container">
+                <div class="slideshow-container">
+                    <div class ="slide2 fade slides">
+                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
+                    </div>
+                    <div class="slide2 fade slides">
+                        <img src="images/home/bathroom-reno.jpg">
+                    </div>
+                    <div class="slide2 fade slides">
+                        <img src="images/home/exterior-finishing.jpg">
+                    </div>
+                    <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides2(1)">&#10095;</a>
+                </div>
+                <div class="dot-container">
+                    <span class="dot2 dots" onclick="currentSlide2(1)"></span>
+                    <span class="dot2 dots" onclick="currentSlide2(2)"></span>
+                    <span class="dot2 dots" onclick="currentSlide2(3)"></span>
+                </div>            
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>           
+        </div>
+        <div id="submit">
+            <div id="submit-button">
+                <div class="halfCircleLeft" onmouse><a href="contact.html"></a></div>
+                <div class="rectangle">
+                    <div class="request-container">
+                        <a href="contact.html">request<br>quote</a>
+                    </div>
+                </div>
+                <div class="halfCircleRight"><a href="contact.html"></a></div>
+            </div>
+        </div>
         <div id="line"></div>
         <footer>
             <div id="contact-info">
