services page completed

--- a/projects_exterior.html
+++ b/projects_exterior.html
@@ -64,7 +64,7 @@
                     </div>                   
                 </div>
                 <div class="mySlides">
-                    <img class="image2" src="image2 hover-shadow" src="images/projects/projects_exterior/stairs1.jpg">
+                    <img class="image2 hover-shadow" src="images/projects/projects_exterior/stairs1.jpg">
                     <div class="center_button_modal">
                         <div class="button-container">
                             <button class="before-button2 active-button">Before</button>
