--- a/services.html
+++ b/services.html
@@ -31,13 +31,8 @@
             </div>
             <div class="line-desktop"></div>
         </header>
-        <div class="services-title">
-            <div class="line"></div>
-            <h2>Services</h2>
-            <div class="line"></div>
-        </div>
         <div class="container-title">
-            <div class="line"></div>
+            <div class="line desktop-line"></div>
             <h3>Interior</h3>
             <div class="line"></div>
         </div>
@@ -69,7 +64,7 @@
             </p> 
         </div>
         <div class="container-title">
-            <div class="line"></div>
+            <div class="line desktop-line"></div>
             <h3>Exterior</h3>
             <div class="line"></div>
         </div>
@@ -101,7 +96,7 @@
             </p> 
         </div>
         <div class="container-title">
-            <div class="line"></div>
+            <div class="line desktop-line"></div>
             <h3>Other</h3>
             <div class="line"></div>
         </div>
