Finished contact page

--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,7 @@
                                 <option value="Bedroom">Bedroom</option>
                                 <option value="Other">Other (Please indicate in message)</option>
                             </select>
+                            <img src=images/icons/down-arrow.png>
                         </div>
                     </div>
                     <div class="dropdown-field">
@@ -85,6 +86,7 @@
                                 <option value="$100000">$50000-$100000</option>
                                 <option value="+$100000">Over $100000</option>
                             </select>
+                            <img src=images/icons/down-arrow.png>
                         </div>
                     </div>
                     <div class="message-field">
