--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                     <div>About Us</div>
                     <span class="line"></span>
                     <p>
-                        We offer such a wide range of services because we believe that homeowners should not have to go searching for a new contractor every time they want to improve their home. We’ve built a loyal customer base by providing them with literal top to bottom service: from roof to foundation. Each service we offer is performed by highly skilled, deeply experienced contractors using the highest quality materials available. Whether big or small, every project is treated with the same level of professionalism.
+                        We offer such a wide range of services because we believe that homeowners should not have to go searching for a new contractor every time they want to improve their home. 
+                        We’ve built a loyal customer base by providing them with literal top to bottom service: from roof to foundation. Each service we offer is performed by highly skilled, deeply experienced contractors using the highest quality materials available. 
+                        Whether big or small, every project is treated with the same level of professionalism.
                     </p>
                 </div>
                 <div class="icon-container">
